Fix resource handling for "production" modules